--- a/css/base.css
+++ b/css/base.css
@@ -60,12 +60,13 @@
 
  	.button.full-width.refresh {
  		margin-top: 8%;
+ 		top: 50%;
  	}
 
  	.compliment {
  		color: #fff;
  		padding-top: 10%;
- 		line-height: 95%;
+ 		line-height: 100%;
  		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  		font-size: 300%;
  		font-weight: bold;
