--- a/css/base.css
+++ b/css/base.css
@@ -60,7 +60,7 @@
 
  	.button.full-width.refresh {
  		margin-top: 8%;
- 		top: 50%;
+ 		top: 1000px;
  	}
 
  	.compliment {
@@ -159,9 +159,9 @@
 	  -moz-border-radius: 2px;
 	  -webkit-border-radius: 2px;
 	  border-radius: 2px;
-	  color: #444;
+	  color: #fff;
 	  display: inline-block;
-	  font-size: 22px;
+	  font-size: 24px;
 	  text-decoration: none;
 	  cursor: pointer;
 	  margin-bottom: 20px;
